--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+
+# Local configuration files
+config.ts
+gsheetkey.json
