--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tensorflow/tfjs": "^4.22.0",
     "google-auth-library": "^10.2.1",
     "googleapis": "^157.0.0",
+    "ml-regression-multivariate-linear": "^2.0.4",
     "socket.io-client": "^4.8.1"
   }
 }
